WP#4: Added flex-box to align cards correctly.

--- a/DP#4-Star-Wars/src/styles/index.css
+++ b/DP#4-Star-Wars/src/styles/index.css
@@ -11,3 +11,7 @@ body {
 h2 {
   padding-top: 1em;
 }
+.row {
+  display: flex;
+  justify-content: center;
+}
